# twitter_crawler

./: .1.txt.un~  .gitignore  1.txt  Pipfile  app.py  pyproject.toml  sonar-project.properties
.github/workflows/: python-app.yml
templates/: base.html  error.html  profile_pic_detail.html  profile_pic_list.html
tests/: test_api.py
